[metadata]
name = netplan
author = Andrew Ma
description = 
description-file = README.md
platforms = any
classifiers = 
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    netplan = netplan.app:main
    delete_vlans = netplan.delete_vlans:main